--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
