--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "install:all": "npm-run-all -p install:backend install:root",
+    "install:backend": "cd backend && npm install",
+    "install:root": "npm install",
     "start": "node ./backend/index.js"
   },
   "repository": {
@@ -21,5 +24,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.1"
   }
 }
